Do not load the platform theme when created a test QApplication

Doing so breaks the plasma qpa so the global menu plasmoid doesn't
work anymore.

BUG:408015
Differential Revision: https://phabricator.kde.org/D21886
Patch by David Edmundson, thanks!